# cloudwatch-application-signals-opentelemetry

./: .gitignore  README.md
api/: .dockerignore  Dockerfile  pyproject.toml
api/api/: __main__.py  app.py  dependencies.py
api/api/config/: settings.py
api/api/config/logger/: __init__.py  logger_create.py  logger_middleware.py
api/api/config/logger/filters/: project_name_version_filter.py
api/api/config/psql/: __init__.py  get_psql_conn.py
functions/archive-to-s3/: bun.lockb  index.ts  package.json
infra/: bun.lockb  package.json  sst.config.ts
