[project]
name = "appsignals-api"
version = "0.0.1"
description = "The API description goes here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiobotocore>=2.13.1",
    "asgi-correlation-id>=4.3.3",
    "asyncpg>=0.29.0",
    "faker>=30.1.0",
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "toml>=0.10.2",
]

[tool.uv]
package = true
dev-dependencies = [
    "ruff>=0.6.8",
]
